tests/whiley/invalid/test_48.wyal
assert "index out of bounds (not less than length)":
    forall(int[] xs):
        if:
            true
        then:
            0 < |xs|


